--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emailjs/browser": "^4.4.1",
     "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.0",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.5.0",
     "ogl": "^1.0.11",
@@ -22,9 +25,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.3.0",
-    "three": "^0.174.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.0.0"
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
